--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
-{
+{"scripts": {
+  "build": "tailwindcss -i ./input.css -o ./css/main.css",
+  "watch": "tailwindcss -i ./input.css -o ./css/main.css --watch"
+},
   "devDependencies": {
     "tailwindcss": "^3.2.1"
   }
